<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved!</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the Location Reminder App</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">To fully utilize the app\'s features, please enable your location services.</string>
    <string name="permission_denied_explanation">To select a more detailed location, enable Location Services.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="login2">Login</string>
    <string name="save_location">Save Location</string>
    <string name="the_title_of_the_reminder">The title of the reminder</string>
    <string name="description">Description</string>
    <string name="the_description">The description</string>
    <string name="location_name">Location name</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="please_fill_out_the_title">Please fill out the title</string>
    <string name="please_select_a_location">Please select a location</string>
    <string name="geofence_added">Geofence added!</string>
    <string name="error_in_adding_geofence">Error in adding geofence</string>
    <string name="geofence_removed">Geofence removed</string>
    <string name="error_in_removing_geofence">Error in removing geofence</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="reminder_updated">The reminder was updated!</string>
    <string name="reminder_deleted">The reminder was deleted!</string>
    <string name="error_in_deleting_reminder">Error in deleting reminder!</string>
    <string name="error_in_removing_old_geofence">Error - the old location is still active!</string>
    <string name="update_the_reminder">update the reminder</string>
    <string name="delete_reminder">delete reminder</string>
    <string name="get_reminded_about_your_tasks_at_the_right_time_and_location">You need to enable notifications. That way, you will be reminded about your tasks at the right time and location!</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not Now</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_toast">Using the app without notifications. On entering your geofence you won\'t be notified!</string>
</resources>
